--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "chart.js": "^3.9.1",
